sanity pom cleanup